Initial, yet untested version of Chronicle-based writer for broker-less WAL